@@ -22,6 +22,7 @@ phpMyAdmin - ChangeLog
 + Patch #3507111 Display distinct results, linked to corresponding data rows
 - bug #3507917 [export] JSON has unescaped values for allegedly numeric columns
 + rfe #3516187 show tables creation, last update, last check timestamps in db_structure
+- bug #3059806 Supporting running from CIFS/Samba shares
 
 3.5.1.0 (not yet released)
 - bug #3510784 [edit] Limit clause ignored when sort order is remembered
